oxiplate-derive/tests/broken/strings/concat-span.stderr
error[E0308]: mismatched types
 --> tests/broken/strings/concat-span.rs:4:38
  |
4 | #[oxiplate_inline(r#"{{ "foo".repeat("hello" ~ " " ~ "world") }}"#)]
  |                               ------ ^^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `&str`
  |                               |
  |                               arguments to this method are incorrect
  |
note: method defined here
 --> $RUST/alloc/src/str.rs
  |
  |     pub fn repeat(&self, n: usize) -> String {
  |            ^^^^^^
